Update sample homepage

--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -12,6 +12,7 @@
 @import '~@fontsource/roboto-mono/400.css';
 @import '~@fontsource/plus-jakarta-sans/600.css';
 @import '~@fontsource/plus-jakarta-sans/700.css'; */
+@import "tailwindcss";
 
 /* Variables */
 :root {
