--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -1,4 +1,5 @@
 /* Remove if fonts are not used */
+@import "tailwindcss";
 /* @import '~@fontsource/inter/100.css';
 @import '~@fontsource/inter/200.css';
 @import '~@fontsource/inter/300.css';
@@ -12,6 +13,7 @@
 @import '~@fontsource/roboto-mono/400.css';
 @import '~@fontsource/plus-jakarta-sans/600.css';
 @import '~@fontsource/plus-jakarta-sans/700.css'; */
+
 
 /* Variables */
 :root {
